fix: small ui fix
style scrollbar for chrome

fix click trigger in nav

--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,28 @@
     @apply border border-orange-500;
   }
 
+  /* scrollbar */
+  ::-webkit-scrollbar {
+    width: 16px;
+    /* border: 1px solid red; */
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: theme(colors.primary.300);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: theme(colors.primary.400);
+  }
+
   .hide-scrollbar::-webkit-scrollbar {
     display: none;
   }
